extends Node
@onready var main_menu_music: AudioStreamPlayer = $MainMenuMusic
@onready var level_music: AudioStreamPlayer = $LevelMusic
@onready var option_hover_sfx: AudioStreamPlayer = $OptionHoverSFX
@onready var pause_sfx: AudioStreamPlayer = $PauseSFX
@onready var resume_sfx: AudioStreamPlayer = $ResumeSFX
@onready var accept_sfx: AudioStreamPlayer = $AcceptSFX
@onready var rewind_sfx: AudioStreamPlayer = $RewindSFX